--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,6 @@
     <span id="loader-span" class="is-hidden"></span>
     <ul class="image-list"></ul>
     <button class="image-button is-hidden button">Load More</button>
-    <script type="module" src="./js/main.js"></script>
+    <script src="./js/main.js" type="module"></script>
   </body>
 </html>
