--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,9 @@
     </form>
     <span id="loader-span" class="is-hidden"></span>
     <ul class="image-list"></ul>
-    <button class="image-button is-hidden button">Load More</button>
+    <button class="image-button is-hidden button" type="button">
+      Load More
+    </button>
     <script src="./js/main.js" type="module"></script>
   </body>
 </html>
